@@ -175,6 +175,35 @@ int _mosquitto_topic_wildcard_len_check(const char *str)
 	return MOSQ_ERR_SUCCESS;
 }
 
+/* Search for + or # in a topic, check they aren't in invalid positions such as foo/#/bar, foo/+bar or foo/bar#.
+ * Return MOSQ_ERR_INVAL if invalid position found.
+ * Also returns MOSQ_ERR_INVAL if the topic string is too long.
+ * Returns MOSQ_ERR_SUCCESS if everything is fine.
+ */
+int _mosquitto_topic_wildcard_pos_check(const char *str)
+{
+	char c = '\0';
+	int len = 0;
+	printf("%s", str);
+	while(str && str[0]){
+		if(str[0] == '+'){
+			if((c != '\0' && c != '/') || (str[1] != '\0' && str[1] != '/')){
+				return MOSQ_ERR_INVAL;
+			}
+		}else if(str[0] == '#'){
+			if((c != '\0' && c != '/')  || str[1] != '\0'){
+				return MOSQ_ERR_INVAL;
+			}
+		}
+		len++;
+		c = str[0];
+		str = &str[1];
+	}
+	if(len > 65535) return MOSQ_ERR_INVAL;
+
+	return MOSQ_ERR_SUCCESS;
+}
+
 /* Does a topic match a subscription? */
 int mosquitto_topic_matches_sub(const char *sub, const char *topic, bool *result)
 {
